--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,22 +8,28 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
     strategy:
-      max-parallel: 4
       matrix:
         python-version: [3.13]
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+
+    - name: Install dependencies
+      working-directory: ./cv_nadia/backend
       run: |
         python -m pip install --upgrade pip
-    - name: Run Tests
-      run: |
-        python manage.py test
+
+    - name: Run tests
+      working-directory: ./cv_nadia/backend
+      run: python manage.py test
+
+
