--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,12 +24,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
-      working-directory: ./cv_nadia/backend
+      working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run tests
-      working-directory: ./cv_nadia/backend
+      working-directory: ./backend
       run: python manage.py test
-
 
