--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,9 +27,10 @@ jobs:
       working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install django djangorestframework
 
     - name: Run tests
       working-directory: ./backend
       run: python manage.py test
+
 
