--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,7 @@ jobs:
       working-directory: ./backend
       run: |
         python -m pip install --upgrade pip
-        pip install django djangorestframework
+        pip install django djangorestframework django-cors-headers
 
     - name: Run tests
       working-directory: ./backend
